New validations, new Operation API, new API functions, better resilience, better perf